# simple-factory-programming-idiom

./: CMakeLists.txt  main.cpp
include/: pizza.h  pizza_store.h  simple_pizza_factories.h
src/: pizza.cpp  pizza_store.cpp  simple_pizza_factories.cpp
